# SmartParkingSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt  test_output.txt
config/: db_config.example.json
docs/: operation_summary.md  plate_recognition_devlog.md
frontend/: admin.html  billing-rules.html  chat.html  checkin.html  conversations.html  dashboard.html  feedback.html  index.html  init.html  parking.html  profile.html  recognize.html  reservation.html  user-checkin.html  vehicles.html
frontend/css/: style.css
frontend/js/: admin.js  auth.js  billing-rules.js  chat.js  checkin.js  common.js  conversations.js  dashboard.js  feedback.js  init.js  parking.js  profile.js  recognize.js  user-checkin.js  vehicles.js
sql/: init.sql
src/: config.cpp  config.h  hyperlpr_bridge.py  llm_bridge.py  lpr_recognizer.cpp  lpr_recognizer.h  main.cpp  ocr_bridge.py  ocr_daemon.py  ocr_server.py  permissions.h  plate_recognizer.cpp  plate_recognizer.h
src/controller/: balance_controller.cpp  base_controller.cpp  blacklist_controller.cpp  bulletin_controller.cpp  customer_service_controller.cpp  customer_service_controller.h  message_controller.cpp  message_controller.h  parking_controller.cpp  pass_plan_controller.cpp  plate_controller.cpp  report_controller.cpp  reservation_controller.cpp  user_controller.cpp  vehicle_controller.cpp
src/database/: db_init.cpp
src/model/: billing.h  car_record.h  cs_message.h  message.h  reservation.h  user.h  user_pass.h
src/service/: auth_service.cpp  auth_service.h  balance_service.cpp  balance_service.h  billing_service.cpp  billing_service.h  blacklist_service.cpp  blacklist_service.h  customer_service_service.cpp  customer_service_service.h  llm_client.cpp  llm_client.h  message_service.cpp  message_service.h  parking_service.cpp  parking_service.h  pass_plan_service.cpp  pass_plan_service.h  plate_service.cpp  plate_service.h  report_service.cpp  report_service.h  reservation_service.cpp  reservation_service.h  user_service.cpp  user_service.h  vehicle_service.cpp  vehicle_service.h
